# test_win

./: .gitmodules  CMakeLists.txt  README.md  check_time_linux.txt  hybrid.sh  j.sh  old.sh  qq.sh  s_w.sh
cmake/: configure.cmake  onetbb.cmake
modules/jacobi/: CMakeLists.txt
modules/jacobi/hybrid_Jacobi/: CMakeLists.txt  main.cpp
modules/jacobi/mpi_Jacobi/: main.cpp
modules/jacobi/omp_Jacobi/: CMakeLists.txt  main.cpp
modules/jacobi/seq_Jacobi/: CMakeLists.txt  main.cpp
modules/jacobi/std_Jacobi/: CMakeLists.txt  main.cpp
modules/jacobi/tbb_Jacobi/: CMakeLists.txt  main.cpp
modules/jacobi/test_tbb/: CMakeLists.txt  main.cpp
modules/seidel/: CMakeLists.txt
modules/seidel/hybrid_Seidel/: CMakeLists.txt  main.cpp
modules/seidel/mpi_Seidel/: CMakeLists.txt  main.cpp
modules/seidel/omp_Seidel/: CMakeLists.txt  main.cpp
modules/seidel/seq_Seidel/: main.cpp
modules/seidel/std_Seidel/: CMakeLists.txt  main.cpp
modules/seidel/tbb_Seidel/: CMakeLists.txt  main.cpp
modules/wave/: CMakeLists.txt
modules/wave/hybrid_Wave/: CMakeLists.txt  main.cpp
modules/wave/mpi_Wave/: main.cpp
modules/wave/omp_Wave/: main.cpp
modules/wave/seq_Wave/: CMakeLists.txt  main.cpp
modules/wave/std_Wave/: CMakeLists.txt  main.cpp
modules/wave/tbb_Wave/: main.cpp
